# 1D_Diffusion

./: CMakeLists.txt  Parameters.h  README.md  main.cpp
code/: DiffusionPlot.py  DiffusionPlotAll.py  main.cpp
code/prms/: Parameters.h
